[package]
name = "normdecimal"
description = "Always normal decimal numbers"
version = "0.1.5"
authors = ["Konstantin Stepanov <me@kstep.me>"]
edition = "2021"
license = "MIT"
categories = ["mathematics", "data-structures"]
keywords = ["decimal", "decnumber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
borsh = ["rust_decimal/borsh", "dep:borsh"]
sqlx = ["dep:sqlx"]
postgres = ["sqlx/postgres"]

[dependencies]
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
borsh = { version = "0.10", optional = true }
sqlx = { version = "0.6", optional = true, features = ["runtime-tokio-native-tls", "decimal"] }
