[package]
name = "normdecimal"
description = "Always normal decimal numbers"
version = "0.1.8"
authors = ["Konstantin Stepanov <me@kstep.me>"]
edition = "2021"
license = "MIT"
categories = ["mathematics", "data-structures"]
keywords = ["decimal", "decnumber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
borsh = ["dep:borsh", "rust_decimal/borsh"]
sqlx = ["dep:sqlx"]
postgres = ["sqlx/postgres"]

[dependencies]
borsh = { version = "1.1.1", optional = true }
rust_decimal = { version = "1.28.1" }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", optional = true, features = [
    "runtime-tokio-native-tls",
    "decimal",
] }
